[package]
name = "mf_watcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.9"
tokio = { version = "1.18.1", features = ["full"] }
anyhow = { version = "1.0.57", features = ["backtrace"] }
select = "0.5.0"